force-app/main/default/objects/Agentforce_Session__c/Agentforce_Session__c.object-meta.xml
<CustomObject>
    <label>Agentforce Session</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Agentforce Session No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agentforce Session</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>