force-app/main/default/objects/Agentforce_Session__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <externalId>true</externalId>
    <label>Phone Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>