force-app/main/default/objects/Agentforce_Session__c/fields/Sequence_ID__c.field-meta.xml
<CustomField>
    <fullName>Sequence_ID__c</fullName>
    <label>Sequence ID</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>